k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: puresecure
  labels:
    app.kubernetes.io/part-of: puresecure-cve-explorer
